refactor(api) : switched from body-based parameter passing to query parameters