@@ -2,6 +2,8 @@ package com.icetea.MonStu.client;
 
 import com.google.cloud.translate.v3.*;
 import com.icetea.MonStu.enums.LanguageCode;
+import com.icetea.MonStu.exception.GoogleResourceExhaustedException;
+import com.icetea.MonStu.exception.NoSuchElementException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
@@ -21,17 +23,18 @@ public class GoogleTranslateClient {
                 .setMimeType("text/plain")
                 .setTargetLanguageCode( LanguageCode.getCode(targetLang).toString() )
                 .addContents( text )
-//                .setSourceLanguageCode(sourceLang)
-//                .setTargetLanguageCode(targetLang)
-//                .addContents(text)
                 .build();
-        TranslateTextResponse response = client.translateText(request);
-//        return response.getTranslationsList()
-//                .stream()
-//                .findFirst()
-//                .map(Translation::getTranslatedText)
-//                .orElseThrow(() ->
-//                        new IllegalStateException("번역 결과가 없습니다."));
-        return response.getTranslationsList().getFirst().getTranslatedText();
+
+        try {
+            TranslateTextResponse response = client.translateText(request);
+            return response.getTranslationsList()
+                    .get(0)
+                    .getTranslatedText();
+        } catch (com.google.api.gax.rpc.ResourceExhaustedException e) {
+            throw new GoogleResourceExhaustedException(null);
+        }
+
+//        TranslateTextResponse response = client.translateText(request);
+//        return response.getTranslationsList().getFirst().getTranslatedText();
     }
 }
